[package]
name = "austrian-oak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", default-features = false, features = ["std", "clock", "serde"] }
clap = { version = "4.4.12", features = ["derive"] }
humantime = "2.1.0"
phf = { version = "0.11.2", features = ["macros"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.109"
